@@ -87,8 +87,8 @@ class WC_Stripe_Payment_Request {
 			return;
 		}
 
-		// Checks if Payment Request is enabled.
-		if ( ! isset( $this->stripe_settings['payment_request'] ) || 'yes' !== $this->stripe_settings['payment_request'] ) {
+		// Don't initiate this class if none of the PRBs are enabled.
+		if ( ! $this->is_at_least_one_payment_request_button_enabled() ) {
 			return;
 		}
 
@@ -705,10 +705,11 @@ class WC_Stripe_Payment_Request {
 		return [
 			'ajax_url'           => WC_AJAX::get_endpoint( '%%endpoint%%' ),
 			'stripe'             => [
-				'key'                => $this->publishable_key,
-				'allow_prepaid_card' => apply_filters( 'wc_stripe_allow_prepaid_card', true ) ? 'yes' : 'no',
-				'locale'             => WC_Stripe_Helper::convert_wc_locale_to_stripe_locale( get_locale() ),
-				'allow_link'         => WC_Stripe_UPE_Payment_Method_Link::is_link_enabled(),
+				'key'                        => $this->publishable_key,
+				'allow_prepaid_card'         => apply_filters( 'wc_stripe_allow_prepaid_card', true ) ? 'yes' : 'no',
+				'locale'                     => WC_Stripe_Helper::convert_wc_locale_to_stripe_locale( get_locale() ),
+				'is_link_enabled'            => WC_Stripe_UPE_Payment_Method_Link::is_link_enabled(),
+				'is_payment_request_enabled' => $this->is_payment_request_enabled(),
 			],
 			'nonce'              => [
 				'payment'                   => wp_create_nonce( 'wc-stripe-payment-request' ),
@@ -847,6 +848,28 @@ class WC_Stripe_Payment_Request {
 		?>
 		<p id="wc-stripe-payment-request-button-separator" style="margin-top:1.5em;text-align:center;display:none;">&mdash; <?php esc_html_e( 'OR', 'woocommerce-gateway-stripe' ); ?> &mdash;</p>
 		<?php
+	}
+
+	/**
+	 * Returns whether at least one of the Express checkouts is enabled.
+	 *
+	 * We have one setting for the Apple Pay / Google Pay wallet and another for Link.
+	 * This method returns true if at least one of those two options is enabled.
+	 *
+	 * @return boolean
+	 */
+	public function is_at_least_one_payment_request_button_enabled() {
+		// Apple Pay / Google Pay is enabled.
+		if ( $this->is_payment_request_enabled() ) {
+			return true;
+		}
+
+		// Link is enabled.
+		if ( WC_Stripe_UPE_Payment_Method_Link::is_link_enabled() ) {
+			return true;
+		}
+
+		return false;
 	}
 
 	/**
@@ -1876,5 +1899,16 @@ class WC_Stripe_Payment_Request {
 		}
 
 		return $this->stripe_settings['payment_request_button_locations'];
+	}
+
+	/**
+	 * Returns whether Payment Request is enabled.
+	 *
+	 * This option defines whether Apple Pay and Google Pay's payment request buttons are enabled.
+	 *
+	 * @return boolean
+	 */
+	private function is_payment_request_enabled() {
+		return isset( $this->stripe_settings['payment_request'] ) && 'yes' === $this->stripe_settings['payment_request'];
 	}
 }
